Terraform/herotrip_without_autoscaling/network_security_groups.tf
resource "aws_security_group" "sg_herotrip" {
  name        = "Herotrip"
  description = "Enable only ssh and application ports"
  vpc_id      = "${aws_vpc.herotrip.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "${var.superman_port}"
    to_port     = "${var.superman_port}"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_redis" {
  name        = "Redis"
  description = "Enable Redis connection from vpc"
  vpc_id      = "${aws_vpc.herotrip.id}"

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["${var.vpc_fullcidr}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_mysql" {
  name        = "Mysql"
  description = "Enable Mysql connection from vpc"
  vpc_id      = "${aws_vpc.herotrip.id}"

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["${var.vpc_fullcidr}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_elb_superman" {
  name        = "LBSuperman"
  description = "Enable only ssh and application ports"
  vpc_id      = "${aws_vpc.herotrip.id}"

  ingress {
    from_port   = 3100
    to_port     = 3100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
